--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,12 +17,29 @@
   body {
     font-size: 85%;
   }
+
   #logo h1 {
     width: 35px;
     height: 35px;
   }
+
   #logo h2 {
     font-size: 2.2em;
-    
+
+  }
+  #social {
+    top: 72px;
+  }
+
+  .col-s3 {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #navbar nav a {
+    font-size: 0.9em;
   }
 }
